...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.activity.SummaryActivity">

    <TextView
        android:id="@+id/tv_summery_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="Bạn đã chọn"
        android:textSize = "25sp"
        android:textColor="#000000"
        android:gravity="center"
...
