<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.activity.SignUpActivity">
    <ImageView
        android:id="@+id/imv_main"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/sapo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/et_main_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "User name"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_main_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "Email"
        app:layout_constraintStart_toStartOf="@id/et_main_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_main_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_email"/>

    <EditText
        android:id="@+id/et_main_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "Password"
        app:layout_constraintStart_toStartOf="@id/et_main_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_main_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_password"/>

    <EditText
        android:id="@+id/et_main_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:hint = "Repeat Password"
        app:layout_constraintStart_toStartOf="@id/et_main_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_main_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_main_report_repeat_password"/>

    <TextView
        android:id="@+id/tv_main_report_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:layout_marginEnd="20dp"
        android:textColor="#DD0B0B"
        app:layout_constraintTop_toBottomOf="@id/imv_main"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/tv_main_report_email"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:textColor="#DD0B0B"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_report_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_main_user_name"/>

    <TextView
        android:id="@+id/tv_main_report_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:textColor="#DD0B0B"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_report_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_main_email"/>

    <TextView
        android:id="@+id/tv_main_report_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:maxLines="1"
        android:lines="1"
        android:textSize = "15sp"
        android:textColor="#DD0B0B"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_report_user_name"
        app:layout_constraintTop_toBottomOf="@id/et_main_password"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textSize = "15sp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop = "50dp"
        app:layout_constraintStart_toStartOf="@id/et_main_password"
        app:layout_constraintEnd_toEndOf="@id/et_main_password"
        app:layout_constraintTop_toBottomOf="@id/et_main_repeat_password"/>
</androidx.constraintlayout.widget.ConstraintLayout>