<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.activity.CityActivity">
    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Chọn tỉnh thành phố bạn ở"
        android:textSize = "25sp"
        android:textColor="#000000"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_city"
        android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_city"
        android:divider="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>